# rknn_hrnet_yolov5_face

./: README.md
hrnet_py/: dataset.txt  test.py
rknn_covid_demo/: .build-android_RK356X.sh.swp  CMakeLists.txt  build-android_RK356X.sh  build-linux_RK356X.sh
rknn_covid_demo/include/: api.h  postprocess.h
rknn_covid_demo/src/: api.cc  main.cc  postprocess.cc
yolov5face/: test.py
